# fp-bindgen

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  PUBLISHING.md  README.md  deny.toml
.cargo/: config.toml
.github/: CODEOWNERS
.github/workflows/: audit_rust.yml  test.yml
bindings/ts-runtime/: index.ts
common/: Cargo.toml
common/src/: datastructures.rs  functions.rs  lib.rs  primitives.rs  serializable.rs  types.rs
docs/: SPEC.md
example/: Cargo.toml
example-plugin/: Cargo.toml
example-plugin/src/: lib.rs
example-plugin/src/example_protocol/: async.rs  functions.rs  mod.rs  queue.rs  support.rs  task.rs  types.rs
example-protocol/: Cargo.toml
example-protocol/bindings/rust-plugin/: support.rs
example-protocol/bindings/ts-runtime/: index.ts
example-protocol/src/: main.rs
example-protocol/src/assets/rust_plugin_test/: expected_Cargo.toml  expected_export.rs  expected_functions.rs  expected_import.rs  expected_lib.rs  expected_mod.rs  expected_types.rs
example-protocol/src/assets/rust_wasmer_runtime_test/: expected_bindings.rs  expected_types.rs
example-protocol/src/assets/ts_runtime_test/: expected_index.ts  expected_types.ts
example-runtime/: Cargo.toml
example-runtime/src/: main.rs
example-runtime/src/spec/: bindings.rs  types.rs
example/example-protocol/: Cargo.toml
example/example-protocol/src/: main.rs
example/example-protocol/src/assets/rust_plugin_test/: expected_Cargo.toml  expected_export.rs  expected_import.rs  expected_types.rs
example/example-protocol/src/assets/rust_wasmer_runtime_test/: expected_bindings.rs  expected_types.rs
example/example-protocol/src/types/: aliases.rs  tagged_enums.rs
example/example-runtime/: Cargo.toml
example/example-runtime/src/spec/: mod.rs
example/src/: lib.rs  main.rs
example/src/assets/rust_plugin_test/: expected_functions.rs  expected_mod.rs  expected_types.rs
examples/: README.md
examples/example-deno-runtime/: loader.ts  tests.ts
examples/example-plugin/: Cargo.toml  rust-toolchain.toml
examples/example-plugin/.cargo/: config
examples/example-plugin/src/: lib.rs  reducer.rs  tracing_subscriber.rs
examples/example-protocol/: Cargo.toml
examples/example-protocol/src/: main.rs
examples/example-protocol/src/assets/rust_plugin_test/: expected_Cargo.toml  expected_Cargo_no_optionals.toml  expected_export.rs  expected_import.rs  expected_lib.rs  expected_types.rs
examples/example-protocol/src/assets/rust_wasmer2_runtime_test/: expected_bindings.rs  expected_types.rs
examples/example-protocol/src/assets/rust_wasmer2_wasi_runtime_test/: expected_bindings.rs
examples/example-protocol/src/assets/rust_wasmer_runtime_test/: expected_bindings.rs  expected_types.rs
examples/example-protocol/src/assets/rust_wasmer_wasi_runtime_test/: expected_bindings.rs  expected_types.rs
examples/example-protocol/src/assets/ts_runtime_test/: expected_index.ts  expected_types.ts
examples/example-protocol/src/types/: aliases.rs  dead_code.rs  flattening.rs  generics.rs  http.rs  inline_docs.rs  mod.rs  module1.rs  module2.rs  options.rs  renaming.rs  time.rs
examples/example-rust-runtime/: Cargo.toml
examples/example-rust-runtime/src/: test.rs
examples/example-rust-runtime/src/spec/: mod.rs
examples/example-rust-wasmer-runtime/: Cargo.toml
examples/example-rust-wasmer-runtime/src/: main.rs  test.rs
examples/example-rust-wasmer-runtime/src/spec/: mod.rs  types.rs
examples/example-rust-wasmer-runtime/src/wasi_spec/: bindings.rs
examples/example-rust-wasmer-wasi-runtime/: Cargo.toml
examples/example-rust-wasmer-wasi-runtime/src/: main.rs  test.rs
examples/example-rust-wasmer-wasi-runtime/src/spec/: mod.rs  types.rs
examples/example-rust-wasmer2-runtime/: Cargo.toml
examples/example-rust-wasmer2-runtime/src/: test.rs
examples/example-rust-wasmer2-runtime/src/spec/: bindings.rs  mod.rs  types.rs
examples/example-rust-wasmer2-runtime/src/wasi_spec/: bindings.rs  mod.rs  types.rs
examples/example-types/: Cargo.toml
examples/example-types/src/: lib.rs
examples/redux-example/: Cargo.toml
examples/redux-example/src/: lib.rs
fp-bindgen/: CHANGELOG.md  Cargo.toml
fp-bindgen-support/: Cargo.toml  README.md
fp-bindgen-support/src/: async.rs  io.rs  lib.rs  task.rs
fp-bindgen-support/src/common/: abi.rs  async.rs  errors.rs  io.rs  mem.rs  mod.rs
fp-bindgen-support/src/guest/: io.rs  mod.rs
fp-bindgen-support/src/guest/async/: mod.rs  task.rs
fp-bindgen-support/src/host/: async.rs  errors.rs  io.rs  mem.rs  mod.rs  new_runtime.rs  runtime.rs
fp-bindgen-support/src/host/async/: future.rs  mod.rs
fp-bindgen-support/src/http/: mod.rs
fp-bindgen-support/src/wasmer2_host/: mem.rs
fp-bindgen-support/src/wasmer2_host/async/: future.rs
fp-bindgen/src/: casing.rs  docs.rs  formatter.rs  functions.rs  generics.rs  lib.rs  prelude.rs  primitives.rs  serializable.rs  traits.rs  types.rs  utils.rs
fp-bindgen/src/generators/: mod.rs
fp-bindgen/src/generators/rust_plugin/: mod.rs
fp-bindgen/src/generators/rust_plugin/assets/: async.rs  mod.rs  queue.rs  support.rs  task.rs
fp-bindgen/src/generators/rust_wasmer2_runtime/: mod.rs
fp-bindgen/src/generators/rust_wasmer2_wasi_runtime/: mod.rs
fp-bindgen/src/generators/rust_wasmer_runtime/: mod.rs
fp-bindgen/src/generators/rust_wasmer_runtime/assets/: errors.rs  lib.rs  support.rs
fp-bindgen/src/generators/rust_wasmer_wasi_runtime/: mod.rs
fp-bindgen/src/generators/ts_runtime/: mod.rs
fp-bindgen/src/serializable/: bytes.rs  chrono.rs  http.rs  mod.rs  rmpv.rs  serde_bytes.rs  serde_json.rs  time.rs  url.rs
fp-bindgen/src/types/: cargo_dependency.rs  custom_type.rs  enums.rs  mod.rs  structs.rs  type_ident.rs
macros/: Cargo.toml  README.md
macros/src/: datastructures.rs  functions.rs  generator.rs  lib.rs  primitives.rs  serializable.rs  typing.rs  utils.rs
macros/src/generators/: mod.rs
macros/src/generators/rust_plugin/: mod.rs
xtask/: Cargo.toml
xtask/src/: clean.rs  main.rs  test.rs  utils.rs
(+2 files in other folders)
