[workspace]
exclude = [
  "examples/example-plugin",
  "examples/example-rust-wasmer-runtime",
  "examples/example-rust-wasmer-wasi-runtime",
  "bindings/rust-plugin",
]
members = [
  "fp-bindgen",
  "fp-bindgen-support",
  "macros",
  "xtask",
  "examples/example-protocol",
  "examples/redux-example",
]
