[workspace]
exclude = [
  "examples/example-plugin",
  "examples/example-rust-wasmer-runtime",
  "examples/example-rust-wasmer-wasi-runtime",
  "bindings/rust-plugin",
]
members = [
  "fp-bindgen",
  "fp-bindgen-support",
  "macros",
  "xtask",
  "examples/example-protocol",
  "examples/redux-example",
]

[workspace.dependencies]
fp-bindgen-macros = { version = "3.0.0-alpha.1", path = "macros" }

[workspace.package]
version = "3.0.0-alpha.1"
authors = ["Fiberplane <info@fiberplane.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/fiberplane/fp-bindgen/"
repository = "https://github.com/fiberplane/fp-bindgen/"
