[workspace]
exclude = [
  "examples/example-plugin",
  "examples/example-rust-wasmer2-runtime",
  "bindings/rust-plugin",
]
members = [
  "fp-bindgen",
  "fp-bindgen-support",
  "macros",
  "xtask",
  "examples/example-protocol",
  "examples/redux-example",
]

[workspace.dependencies]
fp-bindgen-macros = { version = "3.0.0", path = "macros" }

[workspace.package]
version = "3.0.0"
authors = ["Fiberplane <info@fiberplane.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/fiberplane/fp-bindgen/"
repository = "https://github.com/fiberplane/fp-bindgen/"
