[package]
name = "example-plugin"
version = "0.1.0"
authors = ["Fiberplane <info@fiberplane.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
example-bindings = { path = "../example-protocol/bindings/rust-plugin" }
time = { version = "0.3", features = ["serde-human-readable"] }
