[package]
name = "example-protocol"
version = "0.1.0"
authors = ["Fiberplane <info@fiberplane.com>"]
edition = "2018"

[dependencies]
chrono = "0.4.19"
fp-bindgen = { path = "../fp-bindgen", features = [
    "chrono-compat",
    "http-compat",
    "serde-bytes-compat",
] }
pretty_assertions = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
