[package]
name = "example-protocol"
version = "0.1.0"
authors = ["Fiberplane <info@fiberplane.com>"]
edition = "2018"

[dependencies]
fp-bindgen = { path = "../fp-bindgen", features = [
    "http-compat",
    "serde-bytes-compat",
    "time-compat",
    "generators",
] }
pretty_assertions = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
time = { version = "0.3", features = ["serde-human-readable"] }
