[package]
name = "example-runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# The bindings of the plugin are only required because we explicitly link against them
# in the protocol, using `#[fp(rust_wasmer_runtime_module = "example_bindings")]` directives.
# Normally, the runtime would never link against plugin bindings:
example-bindings = { path = "../example-protocol/bindings/rust-plugin" }
fp-bindgen-support = { path = "../fp-bindgen-support", features = [
    "host",
    "async",
] }
once_cell = "1"
rmp-serde = "=1.0.0-beta.2"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
time = { version = "0.3", features = ["serde"] }
wasmer = { version = "2.0", default-features = false }
wasmer-engine-universal = { version = "2.0", features = ["compiler"] }
tokio = { version = "1.9.0", features = ["rt"] }


[target.'cfg(any(target_arch = "arm", target_arch = "aarch64"))'.dependencies]
wasmer-compiler-cranelift = { version = "2.0" }

[target.'cfg(not(any(target_arch = "arm", target_arch = "aarch64")))'.dependencies]
wasmer-compiler-singlepass = { version = "2.0" }
