[package]
name = "fp-bindgen-support"
description = "Support crate for fp-bindgen"
homepage = { workspace = true }
repository = { workspace = true }
readme = "README.md"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[package.metadata.docs.rs]
all-features = true

[dependencies]
fp-bindgen-macros = { workspace = true }
http = { version = "0.2", optional = true }
once_cell = "1"
rmp-serde = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
wasmer = { version = "2.1", optional = true }
thiserror = { version = "1.0.26", optional = true }
tracing = "0.1.37"

[features]
default = []
async = []
guest = []
wasmer2_host = ["dep:wasmer", "dep:thiserror"]
