[package]
name = "fp-bindgen"
version = "0.1.0"
authors = ["Fiberplane <info@fiberplane.com>"]
edition = "2018"

[features]
default = ["time-compat", "serde-bytes-compat"]
serde-bytes-compat = ["serde_bytes"]
time-compat = ["time"]
generators = ["rustfmt-wrapper"]

[dependencies]
dashmap = "4"
fp-bindgen-macros = { path = "../macros" }
Inflector = "0.11"
once_cell = "1"
pretty_assertions = "1"
proc-macro2 = "1"
quote = "1"
serde_bytes = { version = "0.11", optional = true }
syn = { version = "1", features = ["full", "extra-traits"] }
time = { version = "0.3", optional = true }
rustfmt-wrapper = { version = "0.1.0", optional = true }
