[package]
name = "fp-bindgen"
version = "0.1.0"
authors = ["Fiberplane <info@fiberplane.com>"]
edition = "2018"

[features]
default = ["http-compat", "time-compat", "serde-bytes-compat"]
http-compat = ["http"]
serde-bytes-compat = ["serde_bytes"]
time-compat = ["time"]
generators = ["rustfmt-wrapper"]

[dependencies]
fp-bindgen-macros = { path = "../macros" }
http = { version = "0.2", optional = true }
Inflector = "0.11"
pretty_assertions = "1"
proc-macro2 = "1"
quote = "1"
serde_bytes = { version = "0.11", optional = true }
syn = { version = "1", features = ["full", "extra-traits"] }
time = { version = "0.3", features = ["serde-human-readable"], optional = true }
rustfmt-wrapper = { version = "0.1.0", optional = true }
