[package]
name = "fp-bindgen"
description = "Bindings generator for full-stack WASM plugins"
homepage = "https://github.com/fiberplane/fp-bindgen/"
repository = "https://github.com/fiberplane/fp-bindgen/"
readme = "../README.md"
keywords = ["WebAssembly", "WASM", "bindgen"]
categories = ["development-tools::ffi", "wasm"]
version = "1.0.0"
authors = ["Fiberplane <info@fiberplane.com>"]
edition = "2018"
license = "Apache-2.0"

[features]
default = ["http-compat", "rmpv-compat", "time-compat", "serde-bytes-compat"]
http-compat = ["http"]
rmpv-compat = ["rmpv"]
serde-bytes-compat = ["serde_bytes"]
time-compat = ["time"]
generators = ["rustfmt-wrapper"]

[dependencies]
fp-bindgen-macros = { version = "1.0.0", path = "../macros" }
http = { version = "0.2", optional = true }
Inflector = "0.11"
pretty_assertions = "1"
proc-macro2 = "1"
quote = "1"
rmpv = { version = "1.0.0", features = ["with-serde"], optional = true }
serde_bytes = { version = "0.11", optional = true }
syn = { version = "1", features = ["full", "extra-traits"] }
time = { version = "0.3", features = ["serde-human-readable"], optional = true }
rustfmt-wrapper = { version = "0.1.0", optional = true }
