[package]
name = "fp-bindgen-macros"
description = "Macros for fp-bindgen"
homepage = "https://github.com/fiberplane/fp-bindgen/"
repository = "https://github.com/fiberplane/fp-bindgen/"
readme = "README.md"
version = "2.0.1"
authors = ["Fiberplane <info@fiberplane.com>"]
edition = "2018"
license = "Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full", "extra-traits"] }
proc-macro-error = "1.0"
