[package]
name = "fp-bindgen-macros"
description = "Macros for fp-bindgen"
homepage = { workspace = true }
repository = { workspace = true }
readme = "README.md"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full", "extra-traits"] }
proc-macro-error = "1.0"
