[package]
authors = ["Fiberplane <info@fiberplane.com>"]
edition = "2018"
name = "example-plugin"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
bytes = "1"
example-bindings = { path = "../example-protocol/bindings/rust-plugin" }
futures = "0.3"
http = { version = "0.2" }
once_cell = { version = "1" }
redux-example = { path = "../redux-example" }
serde_bytes = { version = "0.11" }
time = { version = "0.3", features = ["serde-human-readable"] }
tracing = "0.1.37"
