[package]
authors = ["Fiberplane <info@fiberplane.com>"]
edition = "2018"
name = "example-protocol"
version = "0.1.0"

[dependencies]
example-types = {path = "../example-types"}
fp-bindgen = {path = "../../fp-bindgen", features = [
  "http-compat",
  "serde-bytes-compat",
  "time-compat",
  "generators",
]}
http = "0.2"
once_cell = "1.10"
pretty_assertions = "0.7"
serde = {version = "1.0", features = ["derive"]}
serde_bytes = "0.11"
time = {version = "0.3", features = ["serde-human-readable"]}
