[package]
edition = "2021"
name = "example-rust-runtime"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# The bindings of the plugin are only required because we explicitly link against them
# in the protocol, using `#[fp(rust_wasmer_runtime_module = "example_bindings")]` directives.
# Normally, the runtime would never link against plugin bindings:
example-bindings = {path = "../example-protocol/bindings/rust-plugin"}
fp-bindgen-support = {path = "../../fp-bindgen-support", features = [
  "async",
  "host",
  "http",
]}
http = "0.2"
once_cell = "1"
rmp-serde = "1.0.0"
serde = {version = "1.0", features = ["derive"]}
serde_bytes = "0.11"
time = {version = "0.3", features = ["serde"]}
tokio = {version = "1.9.0", features = ["rt"]}
wasmer = {version = "2.1", default-features = false}
wasmer-engine-universal = {version = "2.1", features = ["compiler"]}

[target.'cfg(any(target_arch = "arm", target_arch = "aarch64"))'.dependencies]
wasmer-compiler-cranelift = {version = "2.1"}

[target.'cfg(not(any(target_arch = "arm", target_arch = "aarch64")))'.dependencies]
wasmer-compiler-singlepass = {version = "2.1"}
