[package]
edition = "2021"
name = "example-rust-wasmer-runtime"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
redux-example = { path = "../redux-example" }
fp-bindgen-support = { path = "../../fp-bindgen-support", features = [
  "async",
  "host",
  "http",
] }
http = "0.2"
once_cell = "1"
rmp-serde = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
time = { version = "0.3", features = [
  "serde-human-readable",
  "serde-well-known",
  "macros",
] }
tokio = { version = "1.9.0", features = ["rt", "macros", "time"] }
wasmer = { version = "2.3", default-features = false, features = ["singlepass", "default-engine"] }
wasmer-wasi = "2.3"
anyhow = "1.0"

[features]
wasi = []
